--- a/themes/MountainlandTheme/templates/partials/_cart_header_frame.html.twig
+++ b/themes/MountainlandTheme/templates/partials/_cart_header_frame.html.twig
@@ -1,16 +1,19 @@
-<turbo-frame id="cart-data-frame">
+<turbo-frame
+    id="cart-data-frame"
+    data-controller="refresh"
+    data-action="reload@window->refresh#reload">
     <div class="bag-info">
         <span class="bag-count">
-            {% if cartData %}
-                {% set itemCount = cartData.items|length %}
+            {% if cart %}
+                {% set itemCount = cart.items|length %}
                 {{ itemCount == 1 ? '1 item' : itemCount ~ ' items' }}
             {% else %}
                 0 items
             {% endif %}
         </span>
         <span class="bag-total">
-            {% if cartData and cartData.subTotal %}
-                ${{ cartData.subTotal|number_format(2, '.', ',') }}
+            {% if cart and cart.subTotal %}
+                ${{ cart.subTotal|number_format(2, '.', ',') }}
             {% else %}
                 $0.00
             {% endif %}
