--- a/themes/MountainlandTheme/templates/cart/_cart_summary.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_summary.html.twig
@@ -18,7 +18,7 @@
             <span>Total</span>
             <span id="summary-total"></span>
         </div>
-        <a href="{{ path('checkout') }}" class="btn-primary full">Proceed to Checkout</a>
+        <a href="{{ path('checkout-shipping') }}" class="btn-primary full">Proceed to Checkout</a>
         <a href="{{ path('home') }}" class="btn-secondary full">Continue Shopping</a>
     </div>
     <a href="#" class="return-policy-link">View Return Policy</a>
