--- a/themes/MountainlandTheme/templates/checkout/_step_navigation.html.twig
+++ b/themes/MountainlandTheme/templates/checkout/_step_navigation.html.twig
@@ -1,8 +1,8 @@
-<div class="checkout-step-footer">
-    {% if prev_step is defined %}
-        <button class="btn-secondary" type="button" data-prev-step="{{ prev_step }}">{{ prev_text|default('Back') }}</button>
-    {% endif %}
-    {% if next_step is defined %}
-        <button class="btn-primary" type="button" data-next-step="{{ next_step }}">{{ next_text|default('Continue') }}</button>
-    {% endif %}
-</div>
+{#<div class="checkout-step-footer">#}
+{#    {% if prev_step is defined %}#}
+{#        <button class="btn-secondary" type="submit" data-prev-step="{{ prev_step }}">{{ prev_text|default('Back') }}</button>#}
+{#    {% endif %}#}
+{#    {% if next_step is defined %}#}
+{#        <button class="btn-primary" type="submit" data-next-step="{{ next_step }}">{{ next_text|default('Continue') }}</button>#}
+{#    {% endif %}#}
+{#</div>#}
